Binary Search: Implemented kth smallest element using binary search in an un sorted array